--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.MyFirstApplication"
         tools:targetApi="31">
 
-        <activity android:name=".MyFirstActivity" android:exported="true">
+        <activity android:name=".MyUILayoutActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
